# lexichash

./: Cargo.toml  README.md
examples/: benchmark.rs
src/: estimator.rs  lib.rs  main.rs  sketch.rs  sketch_builder.rs  slice.rs  utils.rs
src/builder/: batched_iter.rs  interleaved.rs  iter.rs  mod.rs  parallel.rs  simd_iter.rs  single_thread.rs  utils.rs
